<resources>
    <string name="app_name">ShareNcare</string>
    <string name="api_key">AIzaSyC5GBW_utsccSxqqvyOawamVmacuNohEdY</string>//Curently using this one

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">User Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_trips">collection_trips</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_location">intent_location</string>
    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>
    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>
    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="user_obj">userObj</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="collection_userlocation">UserLocation</string>
    <string name="data_type_broadcast">data_type_broadcast</string>
    <string name="default_notification_channel_name" translatable="true">
       com.example.sharencare.default_notification_channel_name</string>
    <string name="default_notification_channel_id" translatable="false">
            com.example.sharencare.default_notification_channel_id</string>
    <string name="data_title">title</string>
    <string name="fromUserId">fromUserId</string>
    <string name="toUserId">toUserId</string>
    <string name="title_activity_rides_found">Map</string>
    <string name="data_type">data_type</string>
    <string name="otp">otp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rides_found_show_on_map_for_rider">Map</string>


</resources>
